<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootOverlay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dn_background">

    <ScrollView
        android:id="@+id/editScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:fillViewport="true"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dn_background"
            android:clickable="true"
            android:focusable="true"
            android:importantForAutofill="noExcludeDescendants"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/replacement_rule_edit_title"
                    android:textColor="@color/dn_text_color_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="8dp"
                    android:text="@string/replacement_rule_save"
                    android:textColor="@color/dn_color_primary"
                    android:textSize="14dp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/replacement_rule_name_hint"
                android:textColorHint="@color/dn_text_color_black_secondary"
                app:boxBackgroundColor="@color/dn_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/dn_color_primary"
                app:cursorColor="@color/dn_color_primary"
                app:hintTextColor="@color/dn_text_color_black_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/dn_text_color_black"
                    android:textColorHint="@color/dn_text_color_black_secondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/replacement_rule_pattern_hint"
                android:textColorHint="@color/dn_text_color_black_secondary"
                app:boxBackgroundColor="@color/dn_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/dn_color_primary"
                app:cursorColor="@color/dn_color_primary"
                app:hintTextColor="@color/dn_text_color_black_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dn_text_color_black"
                    android:textColorHint="@color/dn_text_color_black_secondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/replacement_rule_replacement_hint"
                android:textColorHint="@color/dn_text_color_black_secondary"
                app:boxBackgroundColor="@color/dn_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/dn_color_primary"
                app:cursorColor="@color/dn_color_primary"
                app:hintTextColor="@color/dn_text_color_black_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etReplacement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dn_text_color_black"
                    android:textColorHint="@color/dn_text_color_black_secondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/replacement_rule_scope_hint"
                android:textColorHint="@color/dn_text_color_black_secondary"
                app:boxBackgroundColor="@color/dn_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/dn_color_primary"
                app:cursorColor="@color/dn_color_primary"
                app:hintTextColor="@color/dn_text_color_black_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etScope"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dn_text_color_black"
                    android:textColorHint="@color/dn_text_color_black_secondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/replacement_rule_exclude_scope_hint"
                android:textColorHint="@color/dn_text_color_black_secondary"
                app:boxBackgroundColor="@color/dn_background"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/dn_color_primary"
                app:cursorColor="@color/dn_color_primary"
                app:hintTextColor="@color/dn_text_color_black_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etExcludeScope"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dn_text_color_black"
                    android:textColorHint="@color/dn_text_color_black_secondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbEnabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/dn_color_primary"
                    android:checked="true"
                    android:text="@string/replacement_rule_enabled"
                    android:textColor="@color/dn_text_color_black" />

                <CheckBox
                    android:id="@+id/cbRegex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/dn_color_primary"
                    android:text="@string/replacement_rule_regex"
                    android:textColor="@color/dn_text_color_black" />

                <CheckBox
                    android:id="@+id/cbApplyTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/dn_color_primary"
                    android:text="@string/replacement_rule_apply_title"
                    android:textColor="@color/dn_text_color_black" />

                <CheckBox
                    android:id="@+id/cbApplyContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/dn_color_primary"
                    android:checked="true"
                    android:text="@string/replacement_rule_apply_content"
                    android:textColor="@color/dn_text_color_black" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>

