<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRuleName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/dn_text_color_black"
                android:textSize="15dp"
                android:textStyle="bold"
                tools:text="规则名称" />

            <TextView
                android:id="@+id/tvRuleState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dn_text_color_black_secondary"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvRule"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/dn_text_color_black_secondary"
                android:textSize="13dp" />
            <TextView
                android:id="@+id/tvReplace"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/dn_text_color_black_secondary"
                android:textSize="13dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnMoveUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/replacement_rule_move_up"
                android:textColor="@color/dn_text_color_black"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/btnMoveDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/replacement_rule_move_down"
                android:textColor="@color/dn_text_color_black"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/replacement_rule_edit"
                android:textColor="@color/dn_color_primary"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/replacement_rule_delete"
                android:textColor="@color/mdr_red_A200"
                android:textSize="13dp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>